--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -9,5 +9,18 @@
     "no":"No",
 
     "skip":"Skip",
-    "next":"Next"
+    "next":"Next",
+    "email":"Email",
+    "password":"Password",
+    "forgotYourPassword" : "Forgot your password?",
+    "registerNewAccount":"Register new account",
+    "enter":"Enter",
+    "afterReceivingYourApplicationWeWillNotifyYouWhenYourApplicationToJoinUsIsAccepted":"After receiving your application, we will notify you when your application to join us is accepted.",
+    "nameAssociationName" : "Name/Association Name",
+    "address":"Address",
+    "phoneNumber":"Phone number",
+    "additionalInformation":"Additional information",
+    "optional":"Optional",
+    "submit":"Submit",
+    "logIntoExistingAccount":"log into existing account"
 }
