--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -22,7 +22,20 @@
     "additionalInformation":"معلومات اضافية",
     "optional":"اختياري",
     "submit" : "تقديم",
-    "logIntoExistingAccount":"تسجيل الدخول إلى الحساب الحالي"
-    
+    "logIntoExistingAccount":"تسجيل الدخول إلى الحساب الحالي",
+    "home" : "الرئيسية",
+    "store" : "المتجر",
+    "settings" : "الاعدادات",
+    "cart" : "عربة التسوق",
+    "visionAndMission" : "الرؤية والرسالة",
+    "vision":"الرؤية",
+    "visionBody" : "أن نكون الرائدين في تقديم التمور عالية الجودة للحجاج والجمعيات الخيرية في المملكة العربية السعودية، وتعزيز روح العطاء والتكافل الاجتماعي.",
+    "mission":"الرسالة",
+    "missionBody":"نسعى من خلال توزيع التمور على الحجاج والجمعيات الخيرية إلى تقديم خدمة متميزة تلبي احتياجات ضيوف الرحمن والفئات المحتاجة، وتعكس قيم العطاء والخير التي تتميز بها مملكتنا، مع الالتزام بأعلى معايير الجودة والشفافية.",
+    "news":"الاخبار",
+    "anAgreementHasBeenEstablishedWithTheAlBirAssociationToDistributeDatesToPilgrimsForTheSeason":"تم انشاء اتفاقية مع جمعية \"البر\" لتوزيع التمر علي الحجاج موسم 2025 ",
+    "thirtyNewTreesWerePlantedInANewArea":"تم زراعة 30 شجرة جديدة في منطقة جديدة ",
+    "anAgreementHasBeenReachedWithGovernmentAgenciesToDistributeDatesToEmployeesThroughoutTheMonthOfRamadan":"تم الاتفاق مع الجهات الحكومية لتوزيع التمر علي الموظيفين طوال ايام شهر رمضان 2025"
+
 
 }
