--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -35,7 +35,9 @@
     "news":"الاخبار",
     "anAgreementHasBeenEstablishedWithTheAlBirAssociationToDistributeDatesToPilgrimsForTheSeason":"تم انشاء اتفاقية مع جمعية \"البر\" لتوزيع التمر علي الحجاج موسم 2025 ",
     "thirtyNewTreesWerePlantedInANewArea":"تم زراعة 30 شجرة جديدة في منطقة جديدة ",
-    "anAgreementHasBeenReachedWithGovernmentAgenciesToDistributeDatesToEmployeesThroughoutTheMonthOfRamadan":"تم الاتفاق مع الجهات الحكومية لتوزيع التمر علي الموظيفين طوال ايام شهر رمضان 2025"
+    "anAgreementHasBeenReachedWithGovernmentAgenciesToDistributeDatesToEmployeesThroughoutTheMonthOfRamadan":"تم الاتفاق مع الجهات الحكومية لتوزيع التمر علي الموظيفين طوال ايام شهر رمضان 2025",
+    "datesProducts":"منتجات التمور",
+    "greenDates" : "تمر خضري"
 
 
 }
