--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -35,6 +35,9 @@
     "news":"News",
     "anAgreementHasBeenEstablishedWithTheAlBirAssociationToDistributeDatesToPilgrimsForTheSeason":"An agreement has been established with the \"Al-Bir\" Association to distribute dates to pilgrims for the 2025 season.",
     "thirtyNewTreesWerePlantedInANewArea":"30 new trees were planted in a new area.",
-    "anAgreementHasBeenReachedWithGovernmentAgenciesToDistributeDatesToEmployeesThroughoutTheMonthOfRamadan":"An agreement has been reached with government agencies to distribute dates to employees throughout the month of Ramadan 2025."
+    "anAgreementHasBeenReachedWithGovernmentAgenciesToDistributeDatesToEmployeesThroughoutTheMonthOfRamadan":"An agreement has been reached with government agencies to distribute dates to employees throughout the month of Ramadan 2025.",
+    "datesProducts" : "Dates Products",
+    "greenDates" : "Green dates"
+
 
 }
