details ui done

--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -37,7 +37,8 @@
     "thirtyNewTreesWerePlantedInANewArea":"تم زراعة 30 شجرة جديدة في منطقة جديدة ",
     "anAgreementHasBeenReachedWithGovernmentAgenciesToDistributeDatesToEmployeesThroughoutTheMonthOfRamadan":"تم الاتفاق مع الجهات الحكومية لتوزيع التمر علي الموظيفين طوال ايام شهر رمضان 2025",
     "datesProducts":"منتجات التمور",
-    "greenDates" : "تمر خضري"
+    "greenDates" : "تمر خضري",
+    "add" : "اضافة"
 
 
 }
