--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -37,7 +37,8 @@
     "thirtyNewTreesWerePlantedInANewArea":"30 new trees were planted in a new area.",
     "anAgreementHasBeenReachedWithGovernmentAgenciesToDistributeDatesToEmployeesThroughoutTheMonthOfRamadan":"An agreement has been reached with government agencies to distribute dates to employees throughout the month of Ramadan 2025.",
     "datesProducts" : "Dates Products",
-    "greenDates" : "Green dates"
+    "greenDates" : "Green dates",
+    "add" : "add"
 
 
 }
