--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -38,7 +38,9 @@
     "anAgreementHasBeenReachedWithGovernmentAgenciesToDistributeDatesToEmployeesThroughoutTheMonthOfRamadan":"An agreement has been reached with government agencies to distribute dates to employees throughout the month of Ramadan 2025.",
     "datesProducts" : "Dates Products",
     "greenDates" : "Green dates",
-    "add" : "add"
+    "add" : "add",
+    "confirmOrder" : "Confirm order",
+    "addMore" : "Add more"
 
 
 }
