--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -42,7 +42,9 @@
     "confirmOrder" : "Confirm order",
     "addMore" : "Add more",
     "orders" : "Orders",
-    "contactUs" : "Contact Us"
+    "contactUs" : "Contact Us",
+    "newDetails" : "New Details",
+    "phone" : "Phone" 
 
 
 }
