order request ui done only

--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -44,7 +44,11 @@
     "orders" : "Orders",
     "contactUs" : "Contact Us",
     "newDetails" : "New Details",
-    "phone" : "Phone" 
-
-
+    "phone" : "Phone",
+    "inventory" : "inventory",
+    "ordersInProgress":"Orders in progress",
+    "joinRequests" : "Join Requests",
+    "newPost" : "New post",
+    "accept" : "Accept",
+    "decline" : "Decline"
 }
