--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -44,9 +44,11 @@
     "orders" : "الطلبات",
     "contactUs" : "تواصل معنا",
     "newDetails" : "تفاصيل الخبر",
-    "phone" : "هاتفيا"
-
-
-
-
+    "phone" : "هاتفيا",
+    "inventory" : "المخزون",
+    "ordersInProgress":"الطلبات",
+    "joinRequests" : "طلب انضمام",
+    "newPost" : "منشور جديد",
+    "accept" : "قبول",
+    "decline" : "رفض"
 }
