--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -50,5 +50,6 @@
     "joinRequests" : "Join Requests",
     "newPost" : "New post",
     "accept" : "Accept",
-    "decline" : "Decline"
+    "decline" : "Decline",
+    "review" : "Review"
 }
