inventory ui not done

--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -51,5 +51,7 @@
     "newPost" : "منشور جديد",
     "accept" : "قبول",
     "decline" : "رفض",
-    "review" : "مراجعة"
+    "review" : "مراجعة",
+    "available" : "المتاح",
+    "unavailable" : "غير المتاح"
 }
