--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -51,5 +51,7 @@
     "newPost" : "New post",
     "accept" : "Accept",
     "decline" : "Decline",
-    "review" : "Review"
+    "review" : "Review",
+    "available" : "Available",
+    "unavailable" : "Unavailable"
 }
