--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -44,7 +44,8 @@
     "orders" : "الطلبات",
     "contactUs" : "تواصل معنا",
     "newDetails" : "تفاصيل الخبر",
-    "phone" : "هاتفيا"
+    "phone" : "هاتفيا",
+    "pleaseEnterYourEmailAndPassword" : "الرجاء إدخال بريدك الإلكتروني وكلمة المرور"
 
 
 
