--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -44,7 +44,8 @@
     "orders" : "Orders",
     "contactUs" : "Contact Us",
     "newDetails" : "New Details",
-    "phone" : "Phone" 
+    "phone" : "Phone",
+    "pleaseEnterYourEmailAndPassword" : "Please enter your email and password"
 
 
 }
