get product store data done

--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -45,7 +45,9 @@
     "contactUs" : "تواصل معنا",
     "newDetails" : "تفاصيل الخبر",
     "phone" : "هاتفيا",
-    "pleaseEnterYourEmailAndPassword" : "الرجاء إدخال بريدك الإلكتروني وكلمة المرور"
+    "pleaseEnterYourEmailAndPassword" : "الرجاء إدخال بريدك الإلكتروني وكلمة المرور",
+    "logout" : "تسجيل الخروج"
+
 
 
 
