--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -45,7 +45,8 @@
     "contactUs" : "Contact Us",
     "newDetails" : "New Details",
     "phone" : "Phone",
-    "pleaseEnterYourEmailAndPassword" : "Please enter your email and password"
+    "pleaseEnterYourEmailAndPassword" : "Please enter your email and password",
+    "logout" : "Logout"
 
 
 }
