cart integration done

--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -46,7 +46,9 @@
     "newDetails" : "تفاصيل الخبر",
     "phone" : "هاتفيا",
     "pleaseEnterYourEmailAndPassword" : "الرجاء إدخال بريدك الإلكتروني وكلمة المرور",
-    "logout" : "تسجيل الخروج"
+    "logout" : "تسجيل الخروج",
+    "theItemHasBeenAddedSuccessfully" : "تمت إضافة العنصر بنجاح"
+
 
 
 
