news integration done

--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -40,6 +40,7 @@
     "greenDates" : "تمر خضري",
     "add" : "اضافة",
     "confirmOrder" : "تاكيد الطلب",
+    "failedToLogin":"فشل في تسجيل الدخول",
     "addMore" : "اضافة المزيد",
     "orders" : "الطلبات",
     "contactUs" : "تواصل معنا",
