--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -53,6 +53,18 @@
     "theOrderHasBeenCreatedSuccessfully" : "The order has been created successfully",
     "theOrderHasFailed" : "The order has failed",
     "confirm" : "Confirm",
-    "yourOrderNumberIs" : "Your order number is"
+    "yourOrderNumberIs" : "Your order number is",
+    "name":"Name",
+    "country":"Country",
+    "city":"City",
+    "street":"Street",
+    "zipCode":"ZipCode",
+    "username" : "Username",
+    "youHaveBeenRegisteredSuccessfully":"You have been registered successfully",
+    "youHaveToErrorInOneOfTheFollowingFields" : "you have to error in one of the following fields",
+    "phoneNumberIsRequired" : "Phone number is required",
+    "emptyValidationError": "This field cannot be empty"
+
+
 
 }
