fixing appbar and bottomNavigation and adding refresh indicator

--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -63,7 +63,10 @@
     "youHaveBeenRegisteredSuccessfully": "لقد تم تسجيلك بنجاح",
     "youHaveToErrorInOneOfTheFollowingFields" : "يجب عليك الخطأ في أحد الحقول التالية",
     "phoneNumberIsRequired" : "رقم الهاتف مطلوب",
-    "emptyValidationError": "هذا الحقل لا يمكن أن يكون فارغاً"
+    "emptyValidationError": "هذا الحقل لا يمكن أن يكون فارغاً",
+    "more": "المزيد",
+    "thisItemHasBeenAddedAlready":"تمت إضافة هذا العنصر بالفعل"
+
 
 
     
