adding category drop down button

--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -83,6 +83,7 @@
     "family":"العائلة",
     "charities":"الجمعيات",
     "fasting":"افطار صائم",
+    "categories" : "فئات",
     "theSumOfFamiliesQuantityFastingQuantityAndCharitiesQuantityMustBeLessThanOrEqualToTotalQuantity" : "يجب أن يكون مجموع كمية الأسرة وكمية الصيام وكمية الصدقات أقل من أو يساوي الكمية الإجمالية"
 
 
