--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -82,6 +82,7 @@
     "family":"Family",
     "charities":"Charities",
     "fasting":"Fasting",
+    "categories" : "Categories",
     "theSumOfFamiliesQuantityFastingQuantityAndCharitiesQuantityMustBeLessThanOrEqualToTotalQuantity" : "The sum of families quantity, fasting quantity, and charities quantity must be less than or equal to total quantity"
 
 
