adding order status and admin order details

--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -84,6 +84,7 @@
     "charities":"الجمعيات",
     "fasting":"افطار صائم",
     "categories" : "فئات",
+    "orderStatus" : "حالة الطلب",
     "theSumOfFamiliesQuantityFastingQuantityAndCharitiesQuantityMustBeLessThanOrEqualToTotalQuantity" : "يجب أن يكون مجموع كمية الأسرة وكمية الصيام وكمية الصدقات أقل من أو يساوي الكمية الإجمالية"
 
 
