--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -60,6 +60,7 @@
     "failedToLogin":"Failed to login",
     "comment" : "Comment",
     "theOrderHasBeenCreatedSuccessfully" : "The order has been created successfully",
+    "theOrderHasBeenEditedSuccessfully" : "The order has been edited successfully",
     "theOrderHasFailed" : "The order has failed",
     "confirm" : "Confirm",
     "yourOrderNumberIs" : "Your order number is",
