padding buttons and chaning login button

--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -98,7 +98,9 @@
     "userFirstName" : "الاسم الأول للمستخدم",
     "userLastName" : "اسم المستخدم الأخير",
     "role" : "وظيفة",
-    "customerType" : "نوع العميل" 
+    "customerType" : "نوع العميل",
+    "quantity" : "الكمية"
+
 
 
 
