--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -94,7 +94,8 @@
     "userFirstName" : "user first name",
     "userLastName" : "user last name",
     "role" : "Role",
-    "customerType" : "Customer Type" 
+    "customerType" : "Customer Type",
+    "quantity" : "Quantity"
 
 
 
