adding the book

--- a/lib/l10n/arb/intl_en.arb
+++ b/lib/l10n/arb/intl_en.arb
@@ -98,7 +98,8 @@
     "quantity" : "Quantity",
     "invoice" : "Invoice",
     "print" : "Print",
-    "printAll" : "Print all"
+    "printAll" : "Print all",
+    "book" : "Book"
 
 
 
