--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -102,7 +102,8 @@
     "quantity" : "الكمية",
     "invoice" : "فاتورة",
     "print" : "طباعة",
-    "printAll" : "طباعة الكل"
+    "printAll" : "طباعة الكل",
+    "book":"كتاب"
 
 
 
