making drawer button work in invoice, adding loading before pdf, adding first and last name in register

--- a/lib/l10n/arb/intl_ar.arb
+++ b/lib/l10n/arb/intl_ar.arb
@@ -103,7 +103,8 @@
     "invoice" : "فاتورة",
     "print" : "طباعة",
     "printAll" : "طباعة الكل",
-    "book":"كتاب"
+    "book":"كتاب",
+    "fileIsOpening":"جاري فتح الملف"
 
 
 
